--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,22 @@
 {
-  "name": "Attendify",
+  "name": "Attendify – Smart Attendance",
   "short_name": "Attendify",
   "start_url": "/",
   "display": "standalone",
-  "theme_color": "#ffffff",
   "background_color": "#ffffff",
-
-  "start_url": "/splash.html",
-
-  "screenshots": [
+  "theme_color": "#3b82f6",
+  "icons": [
     {
-      "src": "/splash.html",
-      "sizes": "1080x1920",
-      "type": "text/html"
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
