--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,16 +5,19 @@
   "display": "standalone",
   "background_color": "#00000000",
   "theme_color": "#3b82f6",
+
   "icons": [
     {
       "src": "/icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
